tweak app list alignment (bug 1138414)

--- a/src/media/css/app-list-filters.styl
+++ b/src/media/css/app-list-filters.styl
@@ -89,8 +89,8 @@ App listing filters.
     display: none;
 }
 
-.app-list-filters + .app-list .app-list-app:first-child {
-    padding-top: 0;
+.app-list-filters + .app-list {
+    margin-top: -15px;
 }
 
 @media $base-tablet {
@@ -129,7 +129,7 @@ App listing filters.
     .app-list-filters-expand-toggle.show {
         display: none;
     }
-    .app-list-filters + .app-list .app-list-app:first-child {
-        padding-top: 15px;
+    .app-list-filters + .app-list  {
+        margin-top: 25px;
     }
 }
